--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "node": ">=16.20.2"
   },
   "scripts": {
+    "test": "jest",
     "lint": "eslint .",
     "lint:fix": "eslint --fix ."
   },
@@ -31,6 +32,8 @@
     "@types/node": "^22.10.2",
     "@types/webpack": "^5.28.5",
     "eslint": "^9.17.0",
+    "jest": "^29.7.0",
+    "prettier": "^3.4.2",
     "typescript": "^5.7.2"
   }
 }
