--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@types/node": "^22.10.2",
     "@types/webpack": "^5.28.5",
     "eslint": "^9.17.0",
+    "globals": "^15.14.0",
     "jest": "^29.7.0",
     "prettier": "^3.4.2",
     "typescript": "^5.7.2"
