--- a/protoc-gen-ts/Cargo.toml
+++ b/protoc-gen-ts/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 [dependencies]
 prost = "0.13.4"
-prost-types = "0.13.4"
 
 [build-dependencies]
+protobuf-src = "2.1.0"
+prost-build = "0.13.4"
